Fixed C button Changed overflow auto to overflow hidden Made the screen display only 35 digits at the top and 12 at the bottom Display syntax error when there are two decimal digits in one number

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body{
     align-items: center;
     margin-bottom: 1em;
     box-shadow: inset 0 0 5px #000000;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .equation{
@@ -80,7 +80,7 @@ button:focus{
     grid-column: 1/4;
     grid-row: 3;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 2fr 1fr;
     row-gap: 10px;
     column-gap: 10px;
 }
